@@ -246,8 +246,8 @@ VideoPanel::film_content_changed (int property)
 			checked_set (_colour_conversion, wxT (""));
 		} else if (vcs->colour_conversion ()) {
 			optional<size_t> preset = vcs->colour_conversion().get().preset ();
-			vector<PresetColourConversion> cc = Config::instance()->colour_conversions ();
 			if (preset) {
+				vector<PresetColourConversion> cc = PresetColourConversion::all ();
 				checked_set (_colour_conversion, cc[preset.get()].name);
 			} else {
 				checked_set (_colour_conversion, _("Custom"));
